style:alignment fixed

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ hr {
 /* header */
 
 .hero {
+    margin: auto;
     text-align: center;
 }
 
